[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/TileMap/TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Objective/ObjLevelUp.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Objective/Obj.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Background_change/Background.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Levels/endless.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Enemies/testing.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Frame/light.tres" type="Texture" id=9]
[ext_resource path="res://Assets/Fonts/Raleway-Regular.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 10 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -48 )
tilemap_path = NodePath("../TileMap")

[node name="Camera2D" parent="Player" instance=ExtResource( 5 )]
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="Label" type="Label" parent="Player/Camera2D"]
margin_left = -232.0
margin_top = -128.0
margin_right = 196.0
margin_bottom = 23.0
rect_scale = Vector2( 0.05, 0.05 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Level 4"
__meta__ = {
"_editor_description_": ""
}

[node name="Objective" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 112, -48 )
z_index = 1
script = null

[node name="ObjLevelUp" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( -112, -48 )
z_index = 1
script = null

[node name="Light2D" type="Light2D" parent="ObjLevelUp"]
enabled = false
texture = ExtResource( 9 )
texture_scale = 3.0
mode = 2

[node name="Enemy" parent="." instance=ExtResource( 8 )]
position = Vector2( 112, -56 )
z_index = 2
tilemap_path = NodePath("../TileMap")

[node name="Enemy2" parent="." instance=ExtResource( 8 )]
z_index = 2
tilemap_path = NodePath("../TileMap")

[node name="Enemy3" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, -112 )
z_index = 2
tilemap_path = NodePath("../TileMap")

[node name="Enemy4" parent="." instance=ExtResource( 8 )]
position = Vector2( -112, -56 )
z_index = 2
tilemap_path = NodePath("../TileMap")

[node name="TileMap" parent="." instance=ExtResource( 1 )]
z_index = 0
z_as_relative = false
tile_data = PoolIntArray( -393223, 0, 0, -393222, 0, 0, -393221, 0, 0, -393220, 0, 0, -393219, 0, 0, -393218, 0, 0, -393217, 0, 0, -458752, 0, 0, -327687, 0, 0, -327683, 0, 0, -393216, 0, 0, -262151, 0, 0, -262149, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -196615, 0, 0, -196613, 0, 0, -196610, 0, 0, -262144, 0, 0, -131079, 0, 0, -131078, 0, 0, -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -196608, 0, 0, -65543, 0, 0, -65541, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -7, 0, 0, -5, 0, 0, -2, 0, 0, -65536, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="Objective2" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, -104 )
z_index = 1
script = null

[node name="ObjLevelUp2" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, 8 )
z_index = 1
script = null

[node name="Light2D" type="Light2D" parent="ObjLevelUp2"]
enabled = false
texture = ExtResource( 9 )
texture_scale = 3.0
mode = 2

[node name="Objective3" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, -72 )
z_index = 1
script = null

[node name="ObjLevelUp3" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 15, -32 )
z_index = 1
script = null

[node name="Light2D" type="Light2D" parent="ObjLevelUp3"]
visible = false
enabled = false
texture = ExtResource( 9 )
texture_scale = 3.0
mode = 2

[node name="Objective4" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( -47, -64 )
z_index = 1
script = null

[node name="ObjLevelUp4" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 48, -64 )
z_index = 1
script = null

[node name="Light2D" type="Light2D" parent="ObjLevelUp4"]
visible = false
enabled = false
texture = ExtResource( 9 )
texture_scale = 3.0
mode = 2

[connection signal="body_entered" from="Objective" to="." method="_on_Objective_body_entered"]
[connection signal="body_entered" from="ObjLevelUp" to="." method="_on_ObjLevelUp_body_entered"]
[connection signal="body_entered" from="Objective2" to="." method="_on_Objective2_body_entered"]
[connection signal="body_entered" from="ObjLevelUp2" to="." method="_on_ObjLevelUp2_body_entered"]
[connection signal="body_entered" from="Objective3" to="." method="_on_Objective_body_entered"]
[connection signal="body_entered" from="Objective3" to="." method="_on_Objective3_body_entered"]
[connection signal="body_entered" from="ObjLevelUp3" to="." method="_on_ObjLevelUp_body_entered"]
[connection signal="body_entered" from="ObjLevelUp3" to="." method="_on_ObjLevelUp3_body_entered"]
[connection signal="body_entered" from="Objective4" to="." method="_on_Objective_body_entered"]
[connection signal="body_entered" from="Objective4" to="." method="_on_Objective4_body_entered"]
[connection signal="body_entered" from="ObjLevelUp4" to="." method="_on_ObjLevelUp_body_entered"]
[connection signal="body_entered" from="ObjLevelUp4" to="." method="_on_ObjLevelUp4_body_entered"]
